# UUV_ROS2

./: .gitignore  README.md
Arduino/ArduinoCode/Control_Motor_Joy/: Control_Motor_Joy.ino
Arduino/ArduinoCode/Control_Motor_Serial/: Control_Motor_Serial.ino
Arduino/ArduinoCode/Receive_Serial_Analog/: Receive_Serial_Analog.ino
Arduino/ArduinoCode/Receive_Serial_data/Receive_Serial_data.cpp/: Receive_Serial_data.cpp.ino
Arduino/Tests/: SendSerialMessages.py  SerialAnalog.py
Git Help/: Shell_Cheatsheet.md  Unix_CLI.md
Git Help/Using_Git/: Intermediate_Git.md  Introduction_to_Git.md  README.md  Repository_Setup.md  Troubleshooting.md
Setup/: Computer Setup.md  baySetup.sh  setup.sh  uuvSetup.sh
ros_ws/: rotation_test_pwm_1.csv
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/log/: latest_build
ros_ws/src/cpp_nodes/: CMakeLists.txt  package.xml
ros_ws/src/cpp_nodes/launch/: arduino_joy.launch.py  uuv_visualization.launch.py
ros_ws/src/cpp_nodes/rviz/: uuv_display.rviz
ros_ws/src/cpp_nodes/src/: arduino_interface.cpp  uuv_broadcaster.cpp
ros_ws/src/nodes_py/: package.xml  setup.cfg  setup.py
ros_ws/src/nodes_py/launch/: arduino_interface.launch.py  arduino_joy.launch.py  arduino_joy_uuv.launch.py  joy.launch.py  joy_linux.launch.py  rotation_test.launch.py  uuv_visualization.launch.py
ros_ws/src/nodes_py/nodes_py/: PoseBroadcaster.py  arduino_interface.py  rotation_test.py
ros_ws/src/uuv_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/uuv_interfaces/msg/: Pose.msg
